<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"



    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_bottom"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <ImageView
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_150"
            android:layout_gravity="center"
            android:src="@drawable/glideline_hi_res" />

        <TextView
            style="@style/editTextNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/dp_20"
            android:text="@string/sign_in_to_continue"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ed_email"
            style="@style/editTextNormal"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="@drawable/box_background"
            android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
            android:drawablePadding="@dimen/dp_10"
            android:drawableTint="@color/text_light_blue"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dp_10" />




        <RelativeLayout
            style="@style/editTextNormal"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_password"
                style="@style/editTextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_10"
                android:background="@drawable/box_background"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/dp_10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10" />

            <ImageView
                android:id="@+id/img_eye"

                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/resource_private"
                app:tint="@color/text_light_blue" />


        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signIn"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_30"
            android:background="@drawable/box_button_background"
            android:text="@string/sign_in"
            android:textAllCaps="false" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_forgot"
            style="@style/textTitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/appColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_forgot"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_ac"
                style="@style/textTitleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/tv_sign_up"
                style="@style/textTitleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_ac"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/register"
                android:textColor="@color/appColor" />


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
